[package]
name = "async-obdc-mssql-core"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.26"
async-trait = "0.1.17"
tokio = { version = "1.17.0", features = ["full"] }
#pyo3-asyncio = "0.16.0"
bigdecimal = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[features]
vendored-openssl = ["quaint/vendored-openssl"]

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
features = [
    "postgresql",
    "mysql",
    "mssql",
    "sqlite",
    "json",
    "uuid",
    "chrono",
    "bigdecimal"
]