[package]
name = "async-obdc-mssql-core"
version = "0.0.1"
edition = "2021"

crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.26"
async-trait = "0.1.17"
tokio = { version = "1.17.0", features = ["full"] }
bigdecimal = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
indexmap = { version = "1.7", features = ["serde-1"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-futures = "0.2"
regex = "1.2"
indoc = "1.0.3"
once_cell = "1.8.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.13.0"
uuid = { version = "0.8.2", features = ["serde"] }
thiserror = "1.0"
#
#pyo3-asyncio = "0.16.0"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
[features]
vendored-openssl = ["quaint/vendored-openssl"]

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
features = [
    "postgresql",
    "mysql",
    "mssql",
    "sqlite",
    "json",
    "uuid",
    "chrono",
    "bigdecimal"
]
