[package]
name = "async-obdc-mssql-core"
version = "0.0.1"
edition = "2021"

crate-type = ["cdylib"]

[dependencies]

anyhow = "1.0.26"
base64 = "0.13.0"
bigdecimal = "0.2.2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde"] }
#pyo3 = { version = "0.17.1", features = ["extension-module"] }

[features]
vendored-openssl = ["quaint/vendored-openssl"]

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
features = [
    "postgresql",
    "mysql",
    "mssql",
    "sqlite",
    "json",
    "uuid",
    "chrono",
    "bigdecimal"
]
